# adaptive-latent-agentic-reasoning

./: .gitignore  README.md  pyproject.toml
alar/: modeling.py  vllm_plugin.py
alar/rl/: ar_grpo.py  install_patches.py  runner.py
alar/scripts/: merge_fsdp_rl.py  merge_rl.py  merge_sft.py
alar/sft/: aasd.py
alar/sft_data/: base.py
scripts/: eval.sh  train_stage1.sh  train_stage2.sh
search/: config.py  dataset.py  evaluate_vllm.py
search/rl/: agent_loop.py  main_ar_grpo.py  reward.py
search/rl/config/: agent_loops.yaml  grpo.yaml
search/scripts/: generate_traces.py  prepare_rl_data.py
search/scripts/retrieval/: server.py  start.sh
tool/: config.py  dataset.py  evaluate_vllm.py
tool/rl/: agent_loop.py  main_ar_grpo.py  reward.py
tool/rl/config/: agent_loops.yaml  grpo.yaml
tool/rollout/: run_turn_sync.py  scoring.py  toolmind_env.py
tool/scripts/: prepare_rl_data.py  prepare_sft_data.py  run_turn_sync_toolmind.sh
verl/verl/experimental/agent_loop/: agent_loop.py
verl/verl/experimental/reward_loop/reward_manager/: naive.py
verl/verl/single_controller/base/: worker.py
verl/verl/utils/: tokenizer.py
verl/verl/utils/reward_score/: __init__.py  toolcall.py
verl/verl/workers/: engine_workers.py  fsdp_workers.py
verl/verl/workers/config/: model.py
verl/verl/workers/reward_manager/: naive.py
verl/verl/workers/rollout/vllm_rollout/: utils.py
